--- a/.env.default
+++ b/.env.default
@@ -1,2 +1,5 @@
 # Api key for https://geoipify.whoisxmlapi.com/api
 API_KEY=
+
+# Mapbox access tocken https://account.mapbox.com
+MAPBOX_ACCESS_TOKEN=
