--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,57 @@
 -i https://pypi.org/simple
+apscheduler==3.6.3
 attrs==19.3.0
 automat==0.8.0
-backoff==1.8.1
-certifi==2019.9.11
-cffi==1.13.0
+backoff==1.10.0
+certifi==2019.11.28
+cffi==1.13.2
 chardet==3.0.4
+click==7.0
 constantly==15.1.0
 cryptography==2.8
 cssselect==1.1.0
+dash-bootstrap-components==0.8.0
+dash-core-components==1.6.0
+dash-html-components==1.0.2
+dash-renderer==1.2.2
+dash-table==4.5.1
+dash==1.7.0
+flask-apscheduler==1.11.0
+flask-compress==1.4.0
+flask-script==2.0.6
+flask==1.1.1
+future==0.18.2
 gmplot==1.2.0
 hyperlink==19.0.0
 idna==2.8
 incremental==17.5.0
-lxml==4.4.1 ; python_version != '3.4'
+itsdangerous==1.1.0
+jinja2==2.10.3
+lxml==4.4.2 ; python_version != '3.4'
+markupsafe==1.1.1
 parsel==1.5.2
+plotly==4.4.1
+protego==0.1.16
 pyasn1-modules==0.2.7
-pyasn1==0.4.7
+pyasn1==0.4.8
 pycparser==2.19
 pydispatcher==2.0.5
 pyhamcrest==1.9.0
-pyopenssl==19.0.0
+pymysql==0.9.3
+pyopenssl==19.1.0
+python-dateutil==2.8.1
+pytz==2019.3
 queuelib==1.5.0
 requests==2.22.0
-scrapy==1.7.3
+retrying==1.3.3
+scrapy==1.8.0
 service-identity==18.1.0
 simple-geoip==0.1.0
-six==1.12.0
-twisted==19.7.0
-urllib3==1.25.6
+six==1.13.0
+sqlalchemy==1.3.12
+twisted==19.10.0
+tzlocal==2.0.0
+urllib3==1.25.7
 w3lib==1.21.0
-zope.interface==4.6.0
+werkzeug==0.16.0
+zope.interface==4.7.1
