some fixies for minter community

--- a/.env.default
+++ b/.env.default
@@ -3,3 +3,9 @@ API_KEY=
 
 # Mapbox access tocken https://account.mapbox.com
 MAPBOX_ACCESS_TOKEN=
+
+# Database connecton string
+DATABASE_URL=mysql+pymysql://USERNAME:PASSWORD@HOST:PORT/DATABASE_NAME?charset=utf8mb4
+
+# Minter network name
+MINTER_NETWORK=minter-mainnet-1
